// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ktWQSf"
          style="min-width: auto;"
          tabindex="0"
        >
          <div
            aria-checked="true"
            aria-label="Remove small"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              small
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kdVHiH"
          />
          <div
            aria-checked="true"
            aria-label="Remove large"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              large
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          aria-label="Grommet tags"
          class="StyledBox-sc-13pk1d4-0 ktWQSf"
          style="min-width: auto;"
          tabindex="0"
        >
          <div
            aria-checked="true"
            aria-label="Remove small"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              small
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kdVHiH"
          />
          <div
            aria-checked="true"
            aria-label="Remove large"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              large
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gdyJns"
      style="min-width: auto;"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hheccf"
      >
        <button
          class="StyledButton-sc-323bzc-0 cfaKOi"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bbjiaZ"
          >
            <svg
              aria-label="Trash"
              class="StyledIcon-ofa7kd-0 exrjxz"
              viewBox="0 0 24 24"
            >
              <path
                d="M4,5 L20,5 L20,23 L4,23 L4,5 Z M1,5 L23,5 M9,1 L15,1 L15,5 L9,5 L9,1 Z M9,1 L15,1 L15,5 L9,5 L9,1 Z M15,9 L15,19 M9,9 L9,19"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cvbRFG"
            />
            small
          </div>
        </button>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kdVHiH"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 hheccf"
      >
        <button
          class="StyledButton-sc-323bzc-0 cfaKOi"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bbjiaZ"
          >
            <svg
              aria-label="Trash"
              class="StyledIcon-ofa7kd-0 exrjxz"
              viewBox="0 0 24 24"
            >
              <path
                d="M4,5 L20,5 L20,23 L4,23 L4,5 Z M1,5 L23,5 M9,1 L15,1 L15,5 L9,5 L9,1 Z M9,1 L15,1 L15,5 L9,5 L9,1 Z M15,9 L15,19 M9,9 L9,19"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cvbRFG"
            />
            large
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ktWQSf"
          style="min-width: auto;"
          tabindex="0"
        >
          <div
            aria-checked="true"
            aria-label="Remove small"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              small
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormSubtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,12 L18,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kdVHiH"
          />
          <div
            aria-checked="true"
            aria-label="Remove large"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              large
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormSubtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,12 L18,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dAPPHp"
          style="min-width: auto;"
          tabindex="0"
        >
          <div
            aria-checked="true"
            aria-label="Remove small"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              small
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcgaqk"
          />
          <div
            aria-checked="true"
            aria-label="Remove large"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              large
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  6`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ktWQSf"
          style="min-width: auto;"
          tabindex="0"
        >
          <div
            aria-checked="true"
            aria-label="Remove small"
            class="StyledBox-sc-13pk1d4-0 bEPOhl sc-gsDJrp iAulwJ"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fiigNB"
            >
              small
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 jBvkdz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kdVHiH"
          />
          <div
            aria-checked="true"
            aria-label="Remove large"
            class="StyledBox-sc-13pk1d4-0 bEPOhl sc-gsDJrp iAulwJ"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 fiigNB"
            >
              large
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 jBvkdz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  7`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ktWQSf"
          style="min-width: auto;"
          tabindex="0"
        >
          <div
            aria-checked="true"
            aria-label="Remove small"
            class="StyledBox-sc-13pk1d4-0 cjovPv sc-gsDJrp fQCdaP"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              small
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kdVHiH"
          />
          <div
            aria-checked="true"
            aria-label="Remove large"
            class="StyledBox-sc-13pk1d4-0 cjovPv sc-gsDJrp fQCdaP"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              large
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  8`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ktWQSf"
          style="min-width: auto;"
        >
          <div
            aria-checked="true"
            aria-label="Remove small"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              small
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kdVHiH"
          />
          <div
            aria-checked="true"
            aria-label="Remove large"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              large
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  9`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ktWQSf"
          style="min-width: auto;"
          tabindex="0"
        >
          <div
            aria-checked="true"
            aria-label="Remove small"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              small
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
          <div
            class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kdVHiH"
          />
          <div
            aria-checked="true"
            aria-label="Remove large"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              large
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tags  10`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iYasFZ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ktWQSf"
          style="min-width: auto;"
          tabindex="0"
        >
          <div
            aria-checked="true"
            aria-label="Remove tag"
            class="StyledBox-sc-13pk1d4-0 iHGkTX sc-gsDJrp hmttsr"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="StyledText-sc-1sadyjn-0 cddmqI"
            >
              tag
            </span>
            <span
              class="sc-bdvvaa hMYmzD"
            >
              <svg
                aria-label="FormClose"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,7 L17,17 M7,17 L17,7"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fqwiwT"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 cmtmLQ"
      >
        <button
          class="StyledButton-sc-323bzc-0 jjojlc"
          type="button"
        >
          Reset tags
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
